kubernetes-advanced/k3s-vagrant-cluster/4-Ingress/ingress-hosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: devops.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-svc
            port:
              number: 1001

  - host: nginx.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-svc
            port:
              number: 1002

  - host: tomcat.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-tomcat-svc
            port:
              number: 1003
